configurations/helm-proxy/network_policy_block_all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-namespace-kubescape
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: kubescape
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: kubescape
